infra/kubevirt/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: gateway
      containers:
      - name: gateway
        image: cyberdesk/gateway:v0.1.3
        ports:
        - containerPort: 80
