infra/kubevirt/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: gateway.cyberdesk.io # TODO: Create actual subdomain and set it up for this somehow
    http:
      paths:
      - path: /vnc
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
